# dviz

./: .gitignore  Cargo.toml  README.md  RELEASE.md  dataflow-mapping.yml  dataflow-path-following.yml  dataflow-robot.yml  dataflow-ros2.yml  dataflow.yml  dviz_design.md  fusion.urdf  mviz_design.md  mviz_features.md  mviz_plan.md  plan.md  update.md
docs/: dviz_plan.md
dviz-core/: Cargo.toml
dviz-core/src/: config.rs  lib.rs  zenoh_protocol.rs
dviz-core/src/types/: marker.rs  point_cloud.rs  transform.rs
dviz-displays/: Cargo.toml
dviz-displays/src/: axes.rs  base.rs  grid.rs  laser_scan.rs  lib.rs  marker.rs  point_cloud.rs  robot_model.rs  tf.rs
dviz-rerun-bridge/: Cargo.toml
dviz-rerun-bridge/src/: adapters.rs  bridge.rs  core_adapters.rs  lib.rs  main.rs
dviz-rosbag/: Cargo.toml
dviz-rosbag/src/: gps.rs  imu.rs  lib.rs  pointcloud.rs  tf.rs
dviz-shell/: Cargo.toml  build.rs
dviz-shell/src/: app.rs  lib.rs  main.rs  zenoh_receiver.rs
dviz-transform/: Cargo.toml
dviz-transform/src/: frame_tree.rs  transform_buffer.rs
dviz-urdf/: Cargo.toml
dviz-urdf/src/: mesh_loader.rs  parser.rs  robot.rs
dviz-widgets/: Cargo.toml
dviz-widgets/src/: control_bar.rs  dataflow_graph.rs  displays_panel.rs  lib.rs  log_panel.rs  node_detail_panel.rs  properties_panel.rs  theme.rs  toolbar.rs
examples/: dataflow-mapping.yml  dataflow-path-following.yml  dataflow-robot.yml  dataflow-ros2.yml
mviz-core/: Cargo.toml
mviz-core/src/: display.rs  lib.rs  zenoh_protocol.rs
mviz-core/src/types/: mod.rs
mviz-displays/: Cargo.toml
mviz-displays/src/: axes.rs  base.rs  grid.rs  laser_scan.rs  lib.rs  marker.rs  point_cloud.rs  robot_model.rs  tf.rs
mviz-rerun-bridge/: Cargo.toml
mviz-rerun-bridge/src/: bridge.rs  core_adapters.rs  lib.rs  main.rs  simulation.rs
mviz-rosbag/: Cargo.toml
mviz-rosbag/src/: lib.rs  messages.rs  player.rs
mviz-shell/: Cargo.toml
mviz-shell/src/: app.rs  dora_receiver.rs  lib.rs  main.rs  zenoh_receiver.rs
mviz-transform/: Cargo.toml
mviz-transform/src/: frame_tree.rs  lib.rs  transform_buffer.rs
mviz-urdf/: Cargo.toml
mviz-urdf/src/: lib.rs  mesh_loader.rs  parser.rs  robot.rs
mviz-widgets/: Cargo.toml
mviz-widgets/src/: dataflow_graph.rs  displays_panel.rs  lib.rs  log_panel.rs  node_detail_panel.rs  properties_panel.rs  sensor_panel.rs  theme.rs
scripts/: ros2_bridge.py
