[package]
name = "dviz-rerun-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rerun bridge for DViz - supports both standalone and Dora dataflow modes"

[dependencies]
dviz-core = { path = "../dviz-core" }

# Dora framework
dora-node-api = { workspace = true }

# Rerun SDK
rerun = { workspace = true }

# Math
glam = { workspace = true }
nalgebra = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
parking_lot = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Zenoh for distributed communication
zenoh = { workspace = true }

# Async runtime
tokio = { workspace = true }

[[bin]]
name = "dviz-dora-bridge"
path = "src/main.rs"
