[package]
name = "dviz-rosbag"
version = "0.1.0"
edition = "2021"
description = "ROS bag file playback for DViz"
license = "MIT"

[dependencies]
# ROS bag reading (ROS1 format)
rosbag = "0.6"

# PointCloud2 message parsing
ros_pointcloud2 = "0.5"

# TF transforms
# Note: tf_rosrust is a maintained fork of rustros_tf
# tf_rosrust = "0.1"

# Visualization
rerun = { workspace = true }

# Core types
dviz-core = { path = "../dviz-core" }

# Transform system
dviz-transform = { path = "../dviz-transform" }

# Utilities
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
