[package]
name = "mviz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for MViz robotics visualizer"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
