[package]
name = "mviz-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
makepad-widgets = { workspace = true }
mviz-widgets = { path = "../mviz-widgets" }
mviz-rerun-bridge = { path = "../mviz-rerun-bridge" }
mviz-displays = { path = "../mviz-displays" }
mviz-core = { path = "../mviz-core" }
mviz-rosbag = { path = "../mviz-rosbag" }
rerun = { workspace = true }
rfd = "0.15"  # Native file dialog
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dora-node-api = { workspace = true }
crossbeam-channel = { workspace = true }
eyre = { workspace = true }
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cc = "1.0"

[[bin]]
name = "mviz"
path = "src/main.rs"
