[package]
name = "mviz-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transform system for MViz robotics visualizer"

[dependencies]
mviz-core = { path = "../mviz-core" }
glam = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
